Add more mixxy models
